llvm-gcc-4.2-2.9/gcc/testsuite/gcc.apple/block-c99-off-default.c
/* APPLE LOCAL file radar 5811887 */
/* Test that with -std=c99 blocks is off by default. */
/* { dg-do compile } */
/* { dg-options "-std=c99" } */

int main()
{
	void (^Vblock)(void) = ^{};	/* { dg-error "expected identifier" } */
}
